# Rebel

./: .env  .gitignore  Anchor.toml  clean-proofs.js  fixed_idl.json  loadenv.js  new-program-keypair.json  package.json  pnpm-lock.yaml  railway.toml  server.js  test-api.js  test-play.js  tsconfig.json
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css
frontend/src/components/: TrackProofButton.js  logo.js
frontend/src/context/: UserContext.js
frontend/src/pages/: FeedPage.js  HomePage.js  ProofsPage.js  SonicMapPage.js  TracksPage.js
frontend/src/services/: api.js  auth.js  proofs.js  tracks.js
magic-test/: server.js
magic-test/public/: index.html
programs/timestamp_proof/: Cargo.toml
programs/timestamp_proof/src/: lib.rs
public/sonic-map/: index.html  main.js  spotifyPlayer.js
sonic-babylon/: generate_coordinates.js  package.json  pnpm-lock.yaml  server.js
sonic-babylon/public/: README.txt  index.html  main.js
src/: app.js  recover_key.js  test-anchor-program.js  test-magic-auth.js  test-proof-of-creation.js  test-rebellion-flow.js
src/account-abstraction/: config.ts  index.ts
src/account-abstraction/interfaces/: types.ts
src/account-abstraction/services/: account-service.ts  (+3 more)
src/config/: database.js
src/middleware/: authMiddleware.js  magic-auth.ts  magicAuth.js  responseMiddleware.js
src/models/: Proof.js  Track.js  User.js
src/utils/: anchorClient.js  proofUtils.js  responseUtils.js
tests/: timestamp_proof.ts
timestamp_proof/: Cargo.toml
(+20 files in other folders)
