[package]
name = "timestamp_proof"
version = "0.1.0"
description = "Proof of Creation Timestamping program for Rebellion music platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "timestamp_proof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
